# Checkers

./: .gitmodules  CMakeLists.txt  README.md
Checkers/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GraphicsCardConfig.cu  GraphicsCardConfig.h  Position.cpp  Position.h  Window.cpp  Window.h  main.cpp
Checkers/Controllers/: ComputerController.cpp  ComputerController.h  Controller.h  DeviceSimulator.cu  DeviceSimulator.h  HostSimulator.cpp  HostSimulator.h  MCTS.cpp  MCTS.h  PlayerController.cpp  PlayerController.h  Simulator.cu  Simulator.h
Checkers/Core/: Core.cpp  Core.h
Checkers/Renderer/: Renderer.cpp  Renderer.h  RendererImpl.cpp  RendererImpl.h  Resources.h  Utils.cpp  Utils.h
